Restyled header h1 and added another media query in an attempt to prevent a line wrap on a small screen landscape orientation.

--- a/public/css/portfolio-page.css
+++ b/public/css/portfolio-page.css
@@ -1,13 +1,8 @@
 body {
 	position: relative;
 	margin: 0;
-	/*background-image: url(/img/subway-portrait.jpg);
-	background-size: 100vw auto;
-	min-height: 100%;
-	background-position: center top;*/
 	background-color: #333;
-/*	background-repeat: no-repeat;
-*/	font-family: Avenir, sans-serif;
+	font-family: Avenir, sans-serif;
 }
 
 header,
@@ -30,7 +25,7 @@ section	{
 }
 
 .page-header h1 {
-	font-size: 3em;
+	font-size: 2.75em;
 	font-weight: normal;
 }
 
@@ -71,11 +66,13 @@ section	{
 	color: #333;
 }
 
-/*@media (orientation: landscape) {
-	
-}*/
+@media (min-width: 640px) {
+	.page-header h1 {
+		font-size: 3.25em;
+	}	
+}
 
-@media (min-width: 768px) {
+@media (min-width: 790px) {
 
 	.page-header h1 {
 		font-size: 4em;
